7- Criando editar e excluir livro (tem problema no editar)

--- a/ProjetoBiblioteca/Views/Autor/Index.cshtml
+++ b/ProjetoBiblioteca/Views/Autor/Index.cshtml
@@ -2,7 +2,7 @@
 
 <link href="~/css/index.css" rel="stylesheet" />
 <h2>Autores</h2>
-<button asp-action="Criar" class="btn">Cadastrar Autor</button>
+<a asp-action="Criar"  class="btn">Cadastrar Autor</a>
 
 
 
