--- a/ProjetoBiblioteca/Views/Edicao/Index.cshtml
+++ b/ProjetoBiblioteca/Views/Edicao/Index.cshtml
@@ -2,7 +2,7 @@
 
 <link href="~/css/index.css" rel="stylesheet" />
 <h2>Editoras</h2>
-<button asp-action="Criar" class="btn">Cadastrar Editora</button>
+<a asp-action="Criar" class="btn">Cadastrar Editora</a>
 <br/>
 
 <table class="tbl tbl-table">
