--- a/ProjetoBiblioteca/wwwroot/css/Acoes.css
+++ b/ProjetoBiblioteca/wwwroot/css/Acoes.css
@@ -42,3 +42,13 @@
     margin:0 auto;
     border-radius:15px;
 }
+
+
+.lif
+{
+    border: 2px solid rgb(15,15,15);
+    max-width:fit-content;
+    padding: 10px;
+    margin: 0 auto;
+    border-radius:15px;
+}
