--- a/ProjetoBiblioteca/Views/Livro/Criar.cshtml
+++ b/ProjetoBiblioteca/Views/Livro/Criar.cshtml
@@ -82,7 +82,15 @@
         <input asp-for="QuantidadeTotal" type="number" min="1" value="1" required  class="i"/>
     </div>
 
+    <div class="d"> 
+        <label class="l lif" for="Capa">
+            Clique para inserir uma capa 
+        </label>
+        <input type="file" name="capa" accept="image/*" class="if" id="Capa" placeholder="Insira uma imagem" style="display:none;" />
 
+        <br/>
+        <small class="l"> Formatos comuns: JPG/PNG. Tamanho Moderado</small>
+    </div>
 
     <button type="submit">Salvar</button>
 
