--- a/ProjetoBiblioteca/Views/Livro/Criar.cshtml
+++ b/ProjetoBiblioteca/Views/Livro/Criar.cshtml
@@ -86,7 +86,7 @@
         <label class="l lif" for="Capa">
             Clique para inserir uma capa 
         </label>
-        <input type="file" name="capa" accept="image/*" class="if" id="Capa" placeholder="Insira uma imagem" style="display:none;" />
+        <input type="file" asp-action="Capa" asp-route-capa="capa" name="capa" accept="image/*" class="if" id="Capa"  placeholder="Insira uma imagem" style="display:none;" />
 
         <br/>
         <small class="l"> Formatos comuns: JPG/PNG. Tamanho Moderado</small>
