--- a/ProjetoBiblioteca/Views/Livro/Index.cshtml
+++ b/ProjetoBiblioteca/Views/Livro/Index.cshtml
@@ -130,6 +130,16 @@
         .btn-excluir:hover {
             background: #ffeaea;
         }
+
+
+
+
+    .imagem{
+        width: 90px;
+        height: 90px;
+    }
+
+
 </style>
 
    
@@ -174,7 +184,7 @@
 
             <tr>
 
-                <td><img src="@l.Capa" /></td>
+                <td><img class="imagem" src="@l.Capa" /></td>
 
                 <td>@l.Id</td>
 
