--- a/ProjetoBiblioteca/Views/Livro/Criar.cshtml
+++ b/ProjetoBiblioteca/Views/Livro/Criar.cshtml
@@ -12,7 +12,7 @@
 
 <link href="~/css/acoes.css" rel="stylesheet" />
 
-<form asp-action="Criar" method="post" class="f">
+<form asp-action="Criar" method="post" enctype="multipart/form-data" class="f">
 
     @Html.AntiForgeryToken()
 
@@ -86,7 +86,7 @@
         <label class="l lif" for="Capa">
             Clique para inserir uma capa 
         </label>
-        <input type="file" asp-action="Capa" asp-route-capa="capa" name="capa" accept="image/*" class="if" id="Capa"  placeholder="Insira uma imagem" style="display:none;" />
+        <input type="file"  name="capa" accept="image/*" class="if" id="Capa"  style="display:none;" />
 
         <br/>
         <small class="l"> Formatos comuns: JPG/PNG. Tamanho Moderado</small>
