14- Adicionando a controller emprestimo (Funções de vitrine, no banco e na controller)

--- a/ProjetoBiblioteca/Views/Shared/_Layout.cshtml
+++ b/ProjetoBiblioteca/Views/Shared/_Layout.cshtml
@@ -100,7 +100,7 @@
 
                 <a asp-controller="Genero" asp-action="Index">Gêneros</a>
 
-                
+                <a asp-controller="Emprestimo" asp-action="Vitrine">Vitrine</a>
 
             @*Somente para Admins verem o Usuários*@
             @if(role == "Admin")
